Add AppFooter component

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -1,4 +1,10 @@
 {
   "APP_NAME": "munieru.jp",
-  "APP_DESCRIPTION": "ムニエルのウェブサイト"
+  "APP_DESCRIPTION": "ムニエルのウェブサイト",
+  "FOOTER_CREATOR": "Created by {creator}",
+  "FOOTER_CREATOR_URL": "https://twitter.com/munieru_jp",
+  "FOOTER_CREATOR_LABEL": "@munieru_jp",
+  "FOOTER_HOSTING_SITE": "Hosted on {site}",
+  "FOOTER_HOSTING_SITE_URL": "https://github.com/munierujp/munieru.jp",
+  "FOOTER_HOSTING_SITE_LABEL": "GitHub"
 }
