Add AppWishListButton component

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -12,5 +12,6 @@
   "HEADER_PROFILE": "Profile",
   "HEADER_SKILLS": "Skills",
   "HEADER_WORKS": "Works",
-  "NAME": "ムニエル"
+  "NAME": "ムニエル",
+  "WISH_LIST": "ほしい物リスト"
 }
