Add Donate section

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -8,6 +8,7 @@
   "FOOTER_HOSTING_SITE": "Hosted on {site}",
   "FOOTER_HOSTING_SITE_URL": "https://github.com/munierujp/munieru.jp",
   "FOOTER_HOSTING_SITE_LABEL": "GitHub",
+  "HEADER_DONATE": "Donate",
   "HEADER_LINKS": "Links",
   "HEADER_PROFILE": "Profile",
   "HEADER_SKILLS": "Skills",
