Update language file

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -2,6 +2,9 @@
   "APP_NAME": "munieru.jp",
   "APP_DESCRIPTION": "ムニエルのウェブサイト",
   "BIO": "江戸川区在住のアプリケーションエンジニア。<br>埼玉生まれ東京育ち。<br>趣味は読書とプログラミング。",
+  "CLOSE": "閉じる",
+  "DONATE_WITH_PAYPAY_TITLE": "PayPayで寄付",
+  "DONATE_WITH_PAYPAY_DESCRIPTION": "PayPayアプリでQRコードを読み取ってください。",
   "FOOTER_CREATOR": "Created by {creator}",
   "FOOTER_CREATOR_URL": "https://twitter.com/munieru_jp",
   "FOOTER_CREATOR_LABEL": "@munieru_jp",
@@ -14,5 +17,6 @@
   "HEADER_SKILLS": "Skills",
   "HEADER_WORKS": "Works",
   "NAME": "ムニエル",
+  "PAYPAY": "PayPay",
   "WISH_LIST": "ほしい物リスト"
 }
