--- a/lang/ja.json
+++ b/lang/ja.json
@@ -3,6 +3,7 @@
   "APP_DESCRIPTION": "ムニエルのウェブサイト",
   "BIO": "江戸川区在住のアプリケーションエンジニア。<br>埼玉生まれ東京育ち。<br>趣味は読書とプログラミング。",
   "CLOSE": "閉じる",
+  "COPY_PAYPAY_ID": "PayPay IDをコピー",
   "DONATE_WITH_PAYPAY_TITLE": "PayPayで寄付",
   "DONATE_WITH_PAYPAY_MESSAGE": "PayPayアプリでQRコードを読み取るか、PayPay IDとして {id} を入力してください。",
   "FOOTER_CREATOR": "Created by {creator}",
