Add AppGifteeButton component

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -12,6 +12,7 @@
   "FOOTER_HOSTING_SITE": "Hosted on {site}",
   "FOOTER_HOSTING_SITE_URL": "https://github.com/munierujp/munieru.jp",
   "FOOTER_HOSTING_SITE_LABEL": "GitHub",
+  "GIFTEE": "giftee",
   "HEADER_DONATE": "Donate",
   "HEADER_LINKS": "Links",
   "HEADER_PROFILE": "Profile",
