--- a/lang/ja.json
+++ b/lang/ja.json
@@ -13,6 +13,7 @@
   "FOOTER_HOSTING_SITE_URL": "https://github.com/munierujp/munieru.jp",
   "FOOTER_HOSTING_SITE_LABEL": "GitHub",
   "GIFTEE": "giftee",
+  "HEADER_BOOKS": "Books",
   "HEADER_DONATE": "Donate",
   "HEADER_LINKS": "Links",
   "HEADER_PROFILE": "Profile",
