--- a/lang/ja.json
+++ b/lang/ja.json
@@ -1,4 +1,5 @@
 {
+  "AGE": "{age}歳",
   "APP_NAME": "munieru.jp",
   "APP_DESCRIPTION": "ムニエルのウェブサイト",
   "BIO": "江戸川区在住のアプリケーションエンジニア。<br>埼玉生まれ東京育ち。<br>趣味は読書とプログラミング。",
