--- a/lang/ja.json
+++ b/lang/ja.json
@@ -14,6 +14,7 @@
   "FOOTER_HOSTING_SITE_URL": "https://github.com/munierujp/munieru.jp",
   "FOOTER_HOSTING_SITE_LABEL": "GitHub",
   "GIFTEE": "giftee",
+  "GITHUB_SPONSORS": "GitHub Sponsors",
   "HEADER_BOOKS": "Books",
   "HEADER_DONATE": "Donate",
   "HEADER_LINKS": "Links",
