--- a/lang/ja.json
+++ b/lang/ja.json
@@ -22,6 +22,7 @@
   "HEADER_SKILLS": "Skills",
   "HEADER_WORKS": "Works",
   "NAME": "ムニエル",
+  "PAYPAL": "PayPal",
   "PAYPAY": "PayPay",
   "WISH_LIST": "ほしい物リスト"
 }
