--- a/lang/ja.json
+++ b/lang/ja.json
@@ -13,7 +13,7 @@
   "GIFTEE": "giftee",
   "GITHUB_SPONSORS": "GitHub Sponsors",
   "HEADER_BOOKS": "Books",
-  "HEADER_DONATE": "Donate",
+  "HEADER_DONATION": "Donation",
   "HEADER_LINKS": "Links",
   "HEADER_PROFILE": "Profile",
   "HEADER_SKILLS": "Skills",
