--- a/lang/ja.json
+++ b/lang/ja.json
@@ -2,7 +2,7 @@
   "AGE": "{age}歳",
   "APP_NAME": "munieru.jp",
   "APP_DESCRIPTION": "ムニエルのウェブサイト",
-  "BIO": "江戸川区在住のアプリケーションエンジニア。<br>埼玉生まれ東京育ち。<br>趣味は読書とプログラミング。",
+  "BIO": "東京都在住のエンジニア。趣味はエンタメ全般。",
   "CLOSE": "閉じる",
   "FOOTER_CREATOR": "Created by {creator}",
   "FOOTER_CREATOR_URL": "https://twitter.com/munieru_jp",
